# classyplate

./: .gitignore  AutoUni.hs  ChangeLog.md  ClassyPlate.hs  DirectUni.hs  Example.hs  Generate.hs  Main.hs  Measure.hs  MiniLangExample.hs  MiniLanguage.hs  TH.hs  TypePrune.hs  classyplate.cabal  flake.nix  stack.yaml
ClassyPlate/: Core.hs  TH.hs  TypePrune.hs
examples/: Example.hs  Generate.hs  Main.hs  MiniLangExample.hs  MiniLanguage.hs
src/Data/Generics/: ClassyPlate.hs
src/Data/Generics/ClassyPlate/: Common.hs  Core.hs  Generate.hs  TH.hs  TypePrune.hs
