name:                classyplate
version:             0.3.0.1
synopsis:            Fuseable type-class based generics
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nemeth Boldizsar
maintainer:          nboldi@elte.hu
-- copyright:           
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Data.Generics.ClassyPlate
                     , Data.Generics.ClassyPlate.Generate
                     , Data.Generics.ClassyPlate.Common
                     , Data.Generics.ClassyPlate.TypePrune
                     , Data.Generics.ClassyPlate.TH
                     , Data.Generics.ClassyPlate.Core
  build-depends:       base             >=4.10   && <4.11
                     , template-haskell >=2.12  && <2.13
  hs-source-dirs:      src
  default-language:    Haskell2010

benchmark measure
  type:             exitcode-stdio-1.0
  hs-source-dirs:   examples
  main-is:          Main.hs
  other-modules:    AutoUni, DirectUni, Example, Generate
  build-depends:    base, criterion, classyplate, parallel, uniplate
  ghc-options:      -O2